[gd_scene load_steps=4 format=3 uid="uid://di2fmjt83fttl"]

[ext_resource type="Script" path="res://Menu/Pause/PauseMenu.gd" id="1_x0ais"]
[ext_resource type="AudioStream" uid="uid://ba435ky5b5vn3" path="res://Sounds/UI/Pause.ogg" id="4_hsgm8"]
[ext_resource type="AudioStream" uid="uid://ygbl2sj5o5va" path="res://Sounds/UI/Unpause.ogg" id="5_j84fc"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
visible = false
script = ExtResource("1_x0ais")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.313726)
metadata/_edit_use_anchors_ = true

[node name="Title" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -276.0
offset_top = -184.0
offset_right = 276.0
offset_bottom = -52.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_outline_size = 6
theme_override_font_sizes/font_size = 96
text = "GAME PAUSED"
metadata/_edit_use_anchors_ = true

[node name="ContinueButton" type="Button" parent="."]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.5
offset_top = -26.5
offset_right = 60.5
offset_bottom = 26.5
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_top = NodePath("../QuitButton")
focus_neighbor_bottom = NodePath("../RestartButton")
theme_override_font_sizes/font_size = 32
text = "Continue"
metadata/_edit_use_anchors_ = true

[node name="RestartButton" type="Button" parent="."]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.5
offset_top = 51.5
offset_right = 37.5
offset_bottom = 104.5
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_top = NodePath("../ContinueButton")
focus_neighbor_bottom = NodePath("../QuitButton")
theme_override_font_sizes/font_size = 32
text = "Restart"
metadata/_edit_use_anchors_ = true

[node name="QuitButton" type="Button" parent="."]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.5
offset_top = 129.5
offset_right = 37.5
offset_bottom = 182.5
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_top = NodePath("../RestartButton")
focus_neighbor_bottom = NodePath("../ContinueButton")
theme_override_font_sizes/font_size = 32
text = "Quit"
metadata/_edit_use_anchors_ = true

[node name="Paused" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_hsgm8")
volume_db = -4.0

[node name="Unpaused" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_j84fc")
volume_db = -4.0

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
